--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 			</div>
 			<h2>الصفحة غير متاحة</h2>
 			<p>اوبس! ربما الصفحة التي تحاول الوصول اليها تم ازالتها او رابط الانتقال غير صحيح.</p>
-			<a href="ar.html">الرجوع للصفحة الرئيسية</a>
+			<a href="index.html">الرجوع للصفحة الرئيسية</a>
 			<div class="notfound-social">
 				<a href="https://facebook.com/elhizazi1" target="_blank"><i class="fa fa-facebook"></i></a>
 				<a href="https://instagram.com/elhizazi1" target="_blank"><i class="fa fa-instagram"></i></a>
